--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Mock Bill Payment Login</title>
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <h2>Login</h2>
+  
   <form id="loginForm">
+    <h2>Login</h2>
     <input type="email" id="email" placeholder="Email" required><br>
     <input type="password" id="password" placeholder="Password" required><br>
     <button type="submit">Login</button>
