refined login page

--- a/public/index.html
+++ b/public/index.html
@@ -8,26 +8,14 @@
 <body>
   
   <form id="loginForm">
-    <h2>Login</h2>
+    <img src="img/bill master2.png" width="220" height="150">
+    <h2>Bill more,<br> Bill Master.</h2>
+    <br><br><br>
     <input type="email" id="email" placeholder="Email" required><br>
     <input type="password" id="password" placeholder="Password" required><br>
     <button type="submit">Login</button>
   </form>
   <p id="response"></p>
-
-  <h3>Registered Users</h3>
-  <table id="usersTable" border="1">
-    <thead>
-      <tr>
-        <th>Account #</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Balance</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
   <script src="js/login.js"></script>
 </body>
 </html>
